k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cyber-devops
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
