k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cyber-devops
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
