k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cyber-devops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
